Dynamic session-specific content returned

--- a/src/main/resources/META-INF/resources/index.xhtml
+++ b/src/main/resources/META-INF/resources/index.xhtml
@@ -10,7 +10,7 @@
     </head>
     <body>
         <p>
-            <h:outputText value="hello world" id="helloMsgId"/>
+            <h:outputText value="#{sessionCounter.value}" id="helloMsgId"/>
         </p>
     </body>
 </html>
